python/rregadmin/hive/cell_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -r ^cell_.* -r ^CellType$ -r ^CellMark$ -r ^CellId$ -o cell_wrapper.py cell_wrapper.xml'
from ctypes import *

from rregadmin.hive.types_wrapper import Cell
from rregadmin.hive.types_wrapper import Hive
from rregadmin.util.offset_wrapper import offset
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.hive.types_wrapper import Bin
from rregadmin.hive.types_wrapper import guint32
from rregadmin.util.value_wrapper import guint8
STRING = c_char_p
from rregadmin.util.ustring_list_wrapper import ustring



# values for enumeration 'CellType'
CELL_TYPE_KEY = 1
CELL_TYPE_VALUE_KEY = 2
CELL_TYPE_KEY_LIST = 3
CELL_TYPE_VALUE_LIST = 4
CELL_TYPE_SECURITY = 5
CELL_TYPE_UNKNOWN = 20
CELL_TYPE_EMPTY = 21
CellType = c_int # enum
# ../../../rregadmin/hive/cell.h 94
cell_alloc = _libraries['librregadmin.so.1'].cell_alloc
cell_alloc.restype = POINTER(Cell)
# cell_alloc(hdesc, ofs, size)
cell_alloc.argtypes = [POINTER(Hive), offset, c_int]
cell_alloc.__doc__ = \
"""Cell * cell_alloc(Hive * hdesc, offset ofs, int size)
../../../rregadmin/hive/cell.h:94"""
# ../../../rregadmin/hive/cell.h 107
cell_unalloc = _libraries['librregadmin.so.1'].cell_unalloc
cell_unalloc.restype = gboolean
# cell_unalloc(in_cell)
cell_unalloc.argtypes = [POINTER(Cell)]
cell_unalloc.__doc__ = \
"""gboolean cell_unalloc(Cell * in_cell)
../../../rregadmin/hive/cell.h:107"""
# ../../../rregadmin/hive/cell.h 114
cell_init = _libraries['librregadmin.so.1'].cell_init
cell_init.restype = gboolean
# cell_init(hdesc, bin, data, data_len)
cell_init.argtypes = [POINTER(Hive), POINTER(Bin), offset, guint32]
cell_init.__doc__ = \
"""gboolean cell_init(Hive * hdesc, Bin * bin, offset data, guint32 data_len)
../../../rregadmin/hive/cell.h:114"""
# ../../../rregadmin/hive/cell.h 120
cell_get = _libraries['librregadmin.so.1'].cell_get
cell_get.restype = POINTER(Cell)
# cell_get(hdesc, in_bin, ptr)
cell_get.argtypes = [POINTER(Hive), POINTER(Bin), offset]
cell_get.__doc__ = \
"""Cell * cell_get(Hive * hdesc, Bin * in_bin, offset ptr)
../../../rregadmin/hive/cell.h:120"""
# ../../../rregadmin/hive/cell.h 128
cell_delete = _libraries['librregadmin.so.1'].cell_delete
cell_delete.restype = None
# cell_delete(in_cell)
cell_delete.argtypes = [POINTER(Cell)]
cell_delete.__doc__ = \
"""void cell_delete(Cell * in_cell)
../../../rregadmin/hive/cell.h:128"""
# ../../../rregadmin/hive/cell.h 134
cell_get_data_length = _libraries['librregadmin.so.1'].cell_get_data_length
cell_get_data_length.restype = guint32
# cell_get_data_length(in_cell)
cell_get_data_length.argtypes = [POINTER(Cell)]
cell_get_data_length.__doc__ = \
"""guint32 cell_get_data_length(Cell * in_cell)
../../../rregadmin/hive/cell.h:134"""
# ../../../rregadmin/hive/cell.h 140
cell_get_data = _libraries['librregadmin.so.1'].cell_get_data
cell_get_data.restype = POINTER(guint8)
# cell_get_data(in_cell)
cell_get_data.argtypes = [POINTER(Cell)]
cell_get_data.__doc__ = \
"""guint8 * cell_get_data(Cell * in_cell)
../../../rregadmin/hive/cell.h:140"""
# ../../../rregadmin/hive/cell.h 149
cell_clear = _libraries['librregadmin.so.1'].cell_clear
cell_clear.restype = gboolean
# cell_clear(in_cell)
cell_clear.argtypes = [POINTER(Cell)]
cell_clear.__doc__ = \
"""gboolean cell_clear(Cell * in_cell)
../../../rregadmin/hive/cell.h:149"""
# ../../../rregadmin/hive/cell.h 155
cell_get_hive = _libraries['librregadmin.so.1'].cell_get_hive
cell_get_hive.restype = POINTER(Hive)
# cell_get_hive(in_cell)
cell_get_hive.argtypes = [POINTER(Cell)]
cell_get_hive.__doc__ = \
"""Hive * cell_get_hive(Cell * in_cell)
../../../rregadmin/hive/cell.h:155"""
# ../../../rregadmin/hive/cell.h 161
cell_get_offset = _libraries['librregadmin.so.1'].cell_get_offset
cell_get_offset.restype = offset
# cell_get_offset(in_cell)
cell_get_offset.argtypes = [POINTER(Cell)]
cell_get_offset.__doc__ = \
"""offset cell_get_offset(Cell * in_cell)
../../../rregadmin/hive/cell.h:161"""
# ../../../rregadmin/hive/cell.h 167
cell_get_bin = _libraries['librregadmin.so.1'].cell_get_bin
cell_get_bin.restype = POINTER(Bin)
# cell_get_bin(in_cell)
cell_get_bin.argtypes = [POINTER(Cell)]
cell_get_bin.__doc__ = \
"""Bin * cell_get_bin(Cell * in_cell)
../../../rregadmin/hive/cell.h:167"""
# ../../../rregadmin/hive/cell.h 175
cell_equal = _libraries['librregadmin.so.1'].cell_equal
cell_equal.restype = gboolean
# cell_equal(in_cella, in_cellb)
cell_equal.argtypes = [POINTER(Cell), POINTER(Cell)]
cell_equal.__doc__ = \
"""gboolean cell_equal(unknown * in_cella, unknown * in_cellb)
../../../rregadmin/hive/cell.h:175"""
# ../../../rregadmin/hive/cell.h 181
cell_is_valid = _libraries['librregadmin.so.1'].cell_is_valid
cell_is_valid.restype = gboolean
# cell_is_valid(in_cell)
cell_is_valid.argtypes = [POINTER(Cell)]
cell_is_valid.__doc__ = \
"""gboolean cell_is_valid(Cell * in_cell)
../../../rregadmin/hive/cell.h:181"""

# values for enumeration 'CellID'
ID_SK_KEY = 27507
ID_LF_KEY = 26220
ID_LH_KEY = 26732
ID_LI_KEY = 26988
ID_RI_KEY = 26994
ID_VK_KEY = 27510
ID_NK_KEY = 27502
CellID = c_int # enum
# ../../../rregadmin/hive/cell.h 189
cell_get_id = _libraries['librregadmin.so.1'].cell_get_id
cell_get_id.restype = CellID
# cell_get_id(in_cell)
cell_get_id.argtypes = [POINTER(Cell)]
cell_get_id.__doc__ = \
"""CellID cell_get_id(Cell * in_cell)
../../../rregadmin/hive/cell.h:189"""
# ../../../rregadmin/hive/cell.h 197
cell_get_type = _libraries['librregadmin.so.1'].cell_get_type
cell_get_type.restype = CellType
# cell_get_type(in_cell)
cell_get_type.argtypes = [POINTER(Cell)]
cell_get_type.__doc__ = \
"""CellType cell_get_type(Cell * in_cell)
../../../rregadmin/hive/cell.h:197"""
# ../../../rregadmin/hive/cell.h 203
cell_get_id_str = _libraries['librregadmin.so.1'].cell_get_id_str
cell_get_id_str.restype = STRING
# cell_get_id_str(in_cell)
cell_get_id_str.argtypes = [POINTER(Cell)]
cell_get_id_str.__doc__ = \
"""unknown * cell_get_id_str(Cell * in_cell)
../../../rregadmin/hive/cell.h:203"""
# ../../../rregadmin/hive/cell.h 211
cell_size = _libraries['librregadmin.so.1'].cell_size
cell_size.restype = guint32
# cell_size(in_cell)
cell_size.argtypes = [POINTER(Cell)]
cell_size.__doc__ = \
"""guint32 cell_size(Cell * in_cell)
../../../rregadmin/hive/cell.h:211"""
# ../../../rregadmin/hive/cell.h 217
cell_is_allocd = _libraries['librregadmin.so.1'].cell_is_allocd
cell_is_allocd.restype = gboolean
# cell_is_allocd(in_cell)
cell_is_allocd.argtypes = [POINTER(Cell)]
cell_is_allocd.__doc__ = \
"""gboolean cell_is_allocd(Cell * in_cell)
../../../rregadmin/hive/cell.h:217"""
# ../../../rregadmin/hive/cell.h 225
cell_get_next = _libraries['librregadmin.so.1'].cell_get_next
cell_get_next.restype = POINTER(Cell)
# cell_get_next(in_cell)
cell_get_next.argtypes = [POINTER(Cell)]
cell_get_next.__doc__ = \
"""Cell * cell_get_next(Cell * in_cell)
../../../rregadmin/hive/cell.h:225"""
# ../../../rregadmin/hive/cell.h 233
cell_get_prev = _libraries['librregadmin.so.1'].cell_get_prev
cell_get_prev.restype = POINTER(Cell)
# cell_get_prev(in_cell)
cell_get_prev.argtypes = [POINTER(Cell)]
cell_get_prev.__doc__ = \
"""Cell * cell_get_prev(Cell * in_cell)
../../../rregadmin/hive/cell.h:233"""
# ../../../rregadmin/hive/cell.h 241
cell_debug_print = _libraries['librregadmin.so.1'].cell_debug_print
cell_debug_print.restype = None
# cell_debug_print(in_cell)
cell_debug_print.argtypes = [POINTER(Cell)]
cell_debug_print.__doc__ = \
"""void cell_debug_print(Cell * in_cell)
../../../rregadmin/hive/cell.h:241"""
# ../../../rregadmin/hive/cell.h 249
cell_debug_print_long = _libraries['librregadmin.so.1'].cell_debug_print_long
cell_debug_print_long.restype = None
# cell_debug_print_long(in_cell)
cell_debug_print_long.argtypes = [POINTER(Cell)]
cell_debug_print_long.__doc__ = \
"""void cell_debug_print_long(Cell * in_cell)
../../../rregadmin/hive/cell.h:249"""
# ../../../rregadmin/hive/cell.h 258
cell_get_xml_output = _libraries['librregadmin.so.1'].cell_get_xml_output
cell_get_xml_output.restype = gboolean
# cell_get_xml_output(in_bin, in_output, in_verbose)
cell_get_xml_output.argtypes = [POINTER(Cell), POINTER(ustring), gboolean]
cell_get_xml_output.__doc__ = \
"""gboolean cell_get_xml_output(unknown * in_bin, ustring * in_output, gboolean in_verbose)
../../../rregadmin/hive/cell.h:258"""
# ../../../rregadmin/hive/cell.h 266
cell_vdump = _libraries['librregadmin.so.1'].cell_vdump
cell_vdump.restype = None
# cell_vdump(in_ustr, in_cell)
cell_vdump.argtypes = [POINTER(ustring), POINTER(Cell)]
cell_vdump.__doc__ = \
"""void cell_vdump(ustring * in_ustr, Cell * in_cell)
../../../rregadmin/hive/cell.h:266"""

# values for enumeration 'CellMark'
CELL_FLAG_VALID = 1
CELL_FLAG_SUBTYPE_VALID = 2
CELL_FLAG_LINKED = 65536
CellMark = c_int # enum
# ../../../rregadmin/hive/cell.h 288
cell_set_mark = _libraries['librregadmin.so.1'].cell_set_mark
cell_set_mark.restype = None
# cell_set_mark(in_cell, in_mark)
cell_set_mark.argtypes = [POINTER(Cell), CellMark]
cell_set_mark.__doc__ = \
"""void cell_set_mark(Cell * in_cell, CellMark in_mark)
../../../rregadmin/hive/cell.h:288"""
# ../../../rregadmin/hive/cell.h 296
cell_check_mark = _libraries['librregadmin.so.1'].cell_check_mark
cell_check_mark.restype = gboolean
# cell_check_mark(in_cell, in_mark)
cell_check_mark.argtypes = [POINTER(Cell), CellMark]
cell_check_mark.__doc__ = \
"""gboolean cell_check_mark(Cell * in_cell, CellMark in_mark)
../../../rregadmin/hive/cell.h:296"""
# ../../../rregadmin/hive/cell.h 304
cell_clear_mark = _libraries['librregadmin.so.1'].cell_clear_mark
cell_clear_mark.restype = None
# cell_clear_mark(in_cell, in_mark)
cell_clear_mark.argtypes = [POINTER(Cell), CellMark]
cell_clear_mark.__doc__ = \
"""void cell_clear_mark(Cell * in_cell, CellMark in_mark)
../../../rregadmin/hive/cell.h:304"""
cell_data_deleter = CFUNCTYPE(None, c_void_p)
__all__ = ['CELL_TYPE_VALUE_LIST', 'ID_VK_KEY', 'CELL_TYPE_UNKNOWN',
           'CELL_FLAG_SUBTYPE_VALID', 'cell_clear_mark', 'ID_LI_KEY',
           'CellMark', 'cell_is_valid', 'CELL_TYPE_VALUE_KEY',
           'cell_check_mark', 'cell_get_bin', 'ID_LF_KEY',
           'cell_delete', 'cell_get_next', 'cell_set_mark',
           'cell_unalloc', 'cell_clear', 'cell_get',
           'cell_get_offset', 'cell_init', 'cell_is_allocd',
           'cell_alloc', 'cell_vdump', 'CELL_TYPE_KEY_LIST',
           'cell_size', 'cell_get_data', 'CELL_TYPE_EMPTY',
           'CELL_FLAG_LINKED', 'cell_get_hive', 'cell_get_xml_output',
           'cell_get_data_length', 'ID_SK_KEY', 'ID_NK_KEY', 'CellID',
           'cell_data_deleter', 'cell_get_id_str', 'ID_LH_KEY',
           'cell_debug_print', 'CELL_FLAG_VALID', 'cell_get_prev',
           'cell_get_id', 'cell_get_type', 'CellType',
           'CELL_TYPE_KEY', 'cell_debug_print_long', 'cell_equal',
           'ID_RI_KEY', 'CELL_TYPE_SECURITY']
